crates/ink/tests/ui/selector_bytes/fail/missing_parameter.stderr
error: expected string or byte string literal as input: unexpected end of input, expected literal
 --> tests/ui/selector_bytes/fail/missing_parameter.rs:1:16
  |
1 | const _: u32 = ink::selector_bytes!();
  |                ^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `ink::selector_bytes` (in Nightly builds, run with -Z macro-backtrace for more info)
